--- a/src/main/java/org/site/herbarium/domain/domain.org
+++ b/src/main/java/org/site/herbarium/domain/domain.org
@@ -1,7 +1,5 @@
 #+title: Domain
-
 * Jardim
-
 ** IDEA Pensar mais sobre como representar o jardim
 talvez estados das plantas
 tipo de terra
@@ -15,8 +13,6 @@ Talvez mostrar formas e combinacoes
 que ajudem dependendo dos problemas
 mostrados no jardim
 
-
-
 Usado para representar
 um jardim
 nao a limites de jardim por perfil
@@ -26,6 +22,8 @@ com pequenos jardins pensado para as melhos interacoes das plantas
 
 
 ** Plantas serao plantas de um jardim
+Porem elas podem ser escolhidas pelo catalogo
+
 usar nomes como plantar e etc para facilitar entendimento
 representar as plantas do jardim sempre como dependentes ou contidas no jardim
 na hora de persistir os dados
@@ -55,8 +53,38 @@ problemas que teve
 solucoes que desenvolveu
 
 
-* Planta
+** Germinou
+ Dentro do jardim e possivel apontar o tempo que demora pra planta germinar
+ como o jardim e uma representacao de um jardim real
+ talvez fosse bom faze-lo de uma forma que seja possivel ir alterando
+ pequenos estados da planta?
 
+
+**  Anotacoes Planta
+ adicionar anotacoes sobre a planta
+ colocar formas de fazer ela para ajudar com algo
+ boas interacoes
+ coisas interessantes que voce percebeu
+ uma forma de criar um diario pessoal do jardim
+
+
+**  PROJ Estacao Automatica
+Quando o usuario fizer login
+chamar uma funcao do jardim
+que compara o a data com as datas de cada estacao
+e define a estacao certa,
+baseado no brasil
+
+*** WAIT Trocar LocalDateTime
+para uma opcao capaz de lidar com zonas de tempo diferentes
+baseadas na localizacao do usuario?
+
+
+** Trocar tipo de terra?
+descobrir como isso funciona
+
+
+* Catalogo
 ** Planta Valida
 plantas adicionadas no sistema vao para uma queu
 
@@ -66,23 +94,20 @@ passando ela da queue para o catalogo principal
 e tornando a planta passivel de ser plantada num jardim
 
 
-** Germinou
-Dentro do jardim e possivel apontar o tempo que demora pra planta germinar
-como o jardim e uma representacao de um jardim real
-talvez fosse bom faze-lo de uma forma que seja possivel ir alterando
-pequenos estados da planta?
+** Filtrar por indicacoes?
 
+** Revisar
+Alterar dados de alguma planta
 
-** Anotacoes
-adicionar anotacoes sobre a planta
-colocar formas de fazer ela para ajudar com algo
-boas interacoes
-coisas interessantes que voce percebeu
-uma forma de criar um diario pessoal do jardim
-
+** Planta
+Nomes
+estacao & biomas & terra
+Indicacoes & contra
+EfeitosMedicinais
+Como Consumir
+Fontes
 
 * Usuario
-
 ** Adicionar Planta
  Necessario:
  Todos padroes de PlantaVO
@@ -93,3 +118,14 @@ uma forma de criar um diario pessoal do jardim
  Necessario alguem validar se as informacaoes sao confiaveis
 
  possivel de automatizar
+
+** PedirRevisao
+uma forma do usuario pedir a revisao de algum dado
+sobre as plantas no catalogo
+
+de preferencia colocar uma sugestao do q esta errado
+e uma fonte?
+
+
+** Publicar jardim
+talvez isso seja uma acao do usuario e nao do jardim
