--- a/src/main/java/org/site/herbarium/domain/domain.org
+++ b/src/main/java/org/site/herbarium/domain/domain.org
@@ -1,131 +1,321 @@
 #+title: Domain
 * Jardim
-** IDEA Pensar mais sobre como representar o jardim
-talvez estados das plantas
-tipo de terra
-quantidade de agua
-o clima da regiao
-uma planta esta ajudando ou atrapalhando as outras
-ha erva daninhas e esse tipo de planta
-pragas no geral
-
-Talvez mostrar formas e combinacoes
-que ajudem dependendo dos problemas
-mostrados no jardim
-
-Usado para representar
-um jardim
-nao a limites de jardim por perfil
-para dar a liberdado do usuario de representar
-as diferentes combinacoes possiveis de se fazer
-com pequenos jardins pensado para as melhos interacoes das plantas
-
-
-** Plantas serao plantas de um jardim
-Porem elas podem ser escolhidas pelo catalogo
-
-usar nomes como plantar e etc para facilitar entendimento
-representar as plantas do jardim sempre como dependentes ou contidas no jardim
-na hora de persistir os dados
-
-*** Planta no jardim
-podem ter anotacoes e fotos privadas
-com observacoes do usuario sobre a planta
-
-depois criar formas de demonstrar como
-as plantas em um jardim interagem no desenvolvimento das outras
-
-nao tenho a menor ideia de como
-
-
-** Jardins sao privados por padrao
-mas sera possivel deixar seus jardins com suas anotacoes e fotos publicas
-em um catalogo separado?
-ou talvez uma lista de anotacoes puxadas dos jardins publicos
-no catalogo principal
-as fotos tb?
-
-
-** Diario do jardim
-uma forma de manter anotacoes sobre oque esta acontece com o jardim
-oq aconteceu com o passar do tempo
+** Diário do jardim
+uma forma de manter anotações sobre oque esta acontece com o jardim
+oque aconteceu com o passar do tempo
 problemas que teve
-solucoes que desenvolveu
-
-
-** Germinou
- Dentro do jardim e possivel apontar o tempo que demora pra planta germinar
- como o jardim e uma representacao de um jardim real
- talvez fosse bom faze-lo de uma forma que seja possivel ir alterando
- pequenos estados da planta?
-
-
-**  Anotacoes Planta
- adicionar anotacoes sobre a planta
- colocar formas de fazer ela para ajudar com algo
- boas interacoes
- coisas interessantes que voce percebeu
- uma forma de criar um diario pessoal do jardim
-
-
-**  PROJ Estacao Automatica
-Quando o usuario fizer login
-chamar uma funcao do jardim
-que compara o a data com as datas de cada estacao
-e define a estacao certa,
+soluções que desenvolveu
+** Plantas Medicinais
+***  Arbóreas
+Costuma se planta direto nos recipientes
+com sacos plásticos de maior capacidade
+**  PROJ Estacão Automática
+Quando o usuário fizer login
+chamar uma função do jardim
+que compara o a data com as datas de cada estacão
+e define a estacão certa,
 baseado no brasil
 
 *** WAIT Trocar LocalDateTime
-para uma opcao capaz de lidar com zonas de tempo diferentes
-baseadas na localizacao do usuario?
-
+para uma opção capaz de lidar com zonas de tempo diferentes
+baseadas na localização do usuário?
 
 ** Trocar tipo de terra?
 descobrir como isso funciona
 
+** -------------------------------
+
+** Plantio
+*** Semeio
+Coletar sementes
+plantá-las e cultivar a planta
+Demora mais para se ter frutos
+mas e melhor para as plantas no geral
+**** Coleta de sementes
+Devem ser colhidas quando estiverem formadas e secas
+preferível coletá-las em embalagens de papel
+Caso a planta libere sementes e frutos ao amadurecer e necessário colher antes
+**** Armazenamento
+Temperatura de 4,5 a 5 C
+em sacos de papel permeável ou material impermeável selado
+**** Dormência
+Caso as plantas não germinem em condições adequadas
+Pode-se romper a superfície da casca
+para que a água entre e ocorra a germinação
+
+*** Transplante
+Costumam crescer e dar frutos mais rápido
+porem são mais suscetíveis a bactérias e pragas
+e as raízes não costumam ser tao profundas
+****  Estacas
+***** Folhas
+Folhas carnosas são destacadas da matriz e deixadas sobre a areia úmida ou parcialmente enterradas
+***** Raiz
+Também pode-se colocas em leito de areia
+***** Caule
+Precisam ter folhas,pelo menos gemas
+precisam ter dois nos no mínimo,um no ápice e outro na base
+**** Cuidados na coleta
+Planta matriz sem sintomas de doença
+Coletar nas horas mais frescas evita perda de água ate o plantio
+Recomenda-se deixar somente as folhas da parte superior
+O corte da estaca é feito imediatamente abaixo de um nó, na base
+Quando as folhas forem muito grandes devem ser cortadas no meio
+***** Tamanho
+de 7 a 15 cm
+**** Enraizamento
+Dura de 1 a 5 semanas
+deixar 2/3 abaixo da terra na sombra
+ou no sol pleno se houver proteção contra a umidade
+**** Transplante
+Raízes bens formadas,indicativos são
+as brotações
+apos transplantar e importante que se irrigue para melhor acomodação do solo
+** Local
+ Fácil acesso a água
+ distante de esgotos fossa e chiqueiros
+ exposto ao sol,de preferencia de manha
+*** Covas
+Utilizadas para especies arbustivas,trepadeiras e arbóreas
+**** Dimensões
+30cm x 30cm x 30cm
+
+Com um espaçamento de 3m entre as plantas e 4m entre as linhas
+levando em conta o crescimento da planta
+*** Canteiros
+Mais comum para plantas de ciclo curto
+**** Dimensões
+1m2 de largura
+
+60cm entre canteiros
+**** Divisão
+***** Padrão
+20cm entre as plantas/30cm sulco
+***** Porte baixo
+35cm entre plantas e 50cm entre linhas
+***** Porte alto
+50cm entre plantas e 70cm entre linhas
+plantas com 2m
+
+*** Sulcos
+Caso seja necessário divisão de touceiras ou rizomas na propagação
+ou algumas especies plantadas em covas
+*** Cobertura Morta
+E recomendado utilizar casca de arroz,capim seco,casca de cafe e etc
+** Solo
+Algumas especies exigem solos úmidos e outras preferem terrenos areno-argiloso com umidade controlada
+*** Correção
+Em caso de covas 1/4 das dosagens
+**** calcário
+para drenar água
+150g/m2/canteiro
+**** Esterco bovino
+6 a 101/m2/canteiro
+**** Esterco de galinha
+2 a 3l/m2/canteiro
+**** húmus
+2l/m2/canteiro
+
+*** Preparação
+Limpa-se a área|local,e revolve-se o solo
+Caso haja inclinação do solo e bom levar em conta para evitar erosão
+Capim-limão pode se tornar uma faixa de retenção por exemplo
+**** Sementeira
+Terra fofa,cobrir a semente com areia ou terra peneirada.
+deixar de 1 a  semanas pra transplante para o canteiro ou solo principal
+** Adubos
+*** Nitrogenado
+Aplicar durante o período de pico do crescimento para melhor resultados
+Bom realizar aplicações parceladas
+ajudam com plantas que se aproveitam das folhas e inflorescências
+**** Plantas
+beladona
+losna
+alfavaca
+alfazema
+melissa
+orégano
+arruda
+*** Fosfatado|potássico
+Bom realizar fosfatagem para corrigir deficiências tipicas do solo da região norte
+são importantes para as partes subterrâneas(raízes,bulbos,rizomas e etc)
+** Pragas
+Ácaros
+Besouros
+Cochonilhas
+Formigas
+lagartas
+Percevejo
+Pulgões
+Lesma
+Nematoides
+*** Doenças
+Fungos
+Bactérias
+Vírus
+*** Controle
+Rotação de culturas
+Espaçamento adequado
+**** Consorciacao
+Uma forma de combinar plantas para combater pragas
+Essencial para a saúde da horta
+
+• Alfavaca - seu cheiro repele moscas e mosquitos. Não devem ser plantadas perto da
+arruda.
+• Funcho - em geral não se dá bem com nenhuma outra planta.
+• Cravo-de-defuntos - protege as lavouras dos nematoides. Aparentemente não é prejudicial
+a nenhuma outra planta.
+• Hortelã - seu cheiro repele lepidópteros tipo borboleta-da-couve podendo ser plantada como
+bordadura de lavoura. Exige atenção pois se alastra com facilidade.
+• Manjerona - melhora o aroma das plantas.
+• Alecrim - mantém afastados a borboleta-da-couve e a mosca-da-cenoura. É planta
+companheira da sálvia.
+• Catinga-de-mulata - seu aroma forte mantém afastados os insetos voadores. pode ser
+plantada em toda área.
+• Tomilho - seu aroma mantém afastada a borboleta-da-couve.
+• Losna - como bordadura, mantém os animais fora da lavoura, mas sua vizinhança não faz
+bem a nenhuma outra planta.
+• Mil-folhas - planta-se com bordadura perto de ervas aromáticas (aumenta a produção de
+óleos essenciais).
+• Arnica brasileira - inibe a germinação de sementes de plantas daninhas.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+** Colheita
+E necessário olhar recomendações especificas para cada planta
+Bom levar em conta que isso também depende do fim dado para a parte colhida
+Realizar com o tempo seco de preferencia pela manha
+Evitar a colheita de plantas doentes, com manchas, fora do padrão, com terra, poeira,órgãos deformados ou outros defeitos
+| Parte colhida      | Ponto de colheita              |
+|--------------------+--------------------------------|
+| Casta e entrecasca | Quando uma estiver florida     |
+| Flores             | No inicio da floração          |
+| Frutos e sementes  | Quando maduros                 |
+| Raízes             | Quando a planta estiver adulta |
+| Talos e folhas     | Antes do florescimento         |
+*** Ferramentas
+Flores e hastes utiliza-se tesoura de poda mas algumas podem ser pegas manualmente
+Raízes e partes subterrâneas utiliza-se pás,enxadas e enxadões
+*** Armazenamento
+Colocado em cestas ou caixas,não se pode amontoar ou amassar pois isso acelera a degradação
+*** Qualidade
+Para o controle de qualidade devem ser anotados os seguintes dados: momento da colheita,
+condução da lavoura, local, produtor, condições de secagem, etc. Imediatamente após a
+colheita o material deve ser encaminhado para a secagem.
+** Secagem
+• Não se recomenda lavar as plantas antes da secagem, exceto no caso de determinados
+rizomas e raízes, que devem ser lavados.
+• Deve-se separar as plantas de espécies diferentes.
+• As plantas colhidas e transportadas ao local de secagem não devem receber raios solares.
+• Antes de submeter as plantas à secagem deve-se fazer a eliminação de elementos estranhos
+(terra, pedras, outras plantas, etc.) e partes que estejam em condições indesejáveis (sujas,
+descoloridas ou manchadas, danificadas).
+• As plantas colhidas inteiras devem ter cada parte (folha, flor, caule, raiz, sementes, frutos)
+seca em separado e conservada depois em recipientes individuais.
+• Quando as raízes são volumosas podem ser cortadas em pedaços ou fatias para facilitar a
+secagem.
+• Para secar as folhas, a melhor maneira é conservá-las com seus talos, pois isto preserva
+sua qualidade, previne danificações e facilita o manuseio.
+** Preparos
+*** Banho
+Faz-se uma infusão ou decocção (veja a seguir) mais concentrada que dever ser coada e misturada na água do banho. Outra maneira indicada é colocar as ervas em um saco de pano firme e deixar boiando na água do banho. Os banhos podem ser parciais ou de corpo inteiro, e são normalmente indicados 1 vez por dia.
+• Amassar as ervas frescas e bem limpas, aplicar diretamente sobre a parte afetada ou
+envolvidas em pano fino ou gaze.
+• As ervas secas podem ser reduzidas a pó, misturadas em água, chás ou outras preparações
+aplicadas envoltas em pano fino sobre as partes afetadas.
+• Pode-se ainda utilizar farinha de mandioca ou fubá de milho e água, geralmente quente, com a planta fresca ou seca triturada.
+*** Compressa
+Preparação de uso local (tópico) que atua pela penetração dos princípios ativos através da pele. Utilizam-se panos, chumaços de algodão ou gaze embebidos em um infuso concentrado, decocto, sumo ou tintura da planta dissolvida em água. A compressa pode ser quente ou fria.
+molhar a ponta de uma toalha e colocar no local afetado, cobrindo com a outra ponta da toalha seca, para conservar o calor.
+*** Decocção
+preparação normalmente utilizada para ervas não aromáticas (que contém princípios estáveis ao calor) e para as drogas vegetais constituídas por sementes, raízes,cascas e outras partes da planta na quantidade prescrita de água fervente. Coar e espremer a erva com um pedaço de pano de ou coador. O decocto deve ser utilizado no mesmo dia de seu preparo.
+*** Gargarejo
+usado para combater afecções da garganta, amigdalite e mau hálito. Faz-se uma infusão concentrada e gargareja quantas vezes for necessário. Ex.: Salvia (mau hálito),tanchagem, malva e romã (amigdalite e afecções na boca).
+*** Inalação
+esta preparação utiliza a combinação do vapor de água quente com aroma das substâncias voláteis das plantas aromáticas, é normalmente recomendada para problemas do aparelho respiratório. Colocar a erva a ser usada numa vasilha com água fervente, na proporção de uma colher de sopa da erva fresca ou seca em ½ litro d’água, aspirar lentamente (contar até 3 durante a inspiração até 3 quando expelir o ar), prosseguindo assim ritmicamente por 15 minutos. O recipiente pode ser mantido no fogo para haver contínua produção de vapor. Usa-se um funil de cartolina (ou outro papel duro); ou ainda uma toalha sobre os ombros, a cabeça e a vasilha, para facilitar a inalação do vapor. No caso de crianças deve-se ter muito cuidado, pois há riscos de queimaduras, pela água quente e pelo vapor, por isso é recomendado o uso de equipamentos elétricos especiais para este fim.
+*** Maceração
+preparação (realizada a frio) que consiste em colocar a parte da planta medicinal dentro de um recipiente contendo álcool, óleo, água ou outro líquido. Folhas, flores e outras partes tenras ficam macerando por 18 a 24 horas. Plantas onde há possibilidade de fermentações não devem ser preparadas desta forma. O recipiente permanece em lugar fresco, protegido da luz solar direta, podendo ser agitado periodicamente. Findo o tempo previsto, filtra-se o líquido e pode-se acrescentar uma quantidade de diluente (água por exemplo), se achar necessário para obter um volume final desejado.
+*** Óleos
+São feitos na impossibilidade de fazer pomadas ou compressas. As ervas secas ou frescas são colocadas em um frasco transparente com óleo de oliva, girassol ou milho, depois manter o frasco fechado diretamente sob o sol por 2 a 3 semanas. Filtrar ao final e separar uma possível camada de água que se formar. Conservar em vidros que o protejam da luz.
+*** TODO olhar o resto
 
 * Catalogo
 ** Planta Valida
-plantas adicionadas no sistema vao para uma queu
+plantas adicionadas no sistema vão para uma quem
 
-quando alguem conferir se as informacoes sao validas
-sera possivel valida-la
+quando alguém conferir se as informações são validas
+sera possível valida-la
 passando ela da queue para o catalogo principal
-e tornando a planta passivel de ser plantada num jardim
+e tornando a planta passível de ser plantada num jardim
 
-
-** Filtrar por indicacoes?
-
+** Filtrar por indicações?
 ** Revisar
 Alterar dados de alguma planta
 
 ** Planta
 Nomes
-estacao & biomas & terra
-Indicacoes & contra
+estacão & biomas & terra
+Indicações & contra
 EfeitosMedicinais
 Como Consumir
 Fontes
 
-* Usuario
+* Usuário
 ** Adicionar Planta
- Necessario:
- Todos padroes de PlantaVO
+ Necessário:
+ Todos padrões de PlantaVO
 
- senao funcao dara erro
+ senão função dará erro
 
- Sera colocada numa queu de avaliacao
- Necessario alguem validar se as informacaoes sao confiaveis
+ Sera colocada numa queu de avaliação
+ Necessário alguém validar se as informações são confiáveis
 
- possivel de automatizar
+ possível de automatizar
 
-** PedirRevisao
-uma forma do usuario pedir a revisao de algum dado
+** PedirRevisão
+uma forma do usuário pedir a revisão de algum dado
 sobre as plantas no catalogo
 
-de preferencia colocar uma sugestao do q esta errado
+de preferencia colocar uma sugestão do q esta errado
 e uma fonte?
 
-
 ** Publicar jardim
-talvez isso seja uma acao do usuario e nao do jardim
+talvez isso seja uma ação do usuário e não do jardim
